--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,34 +1,59 @@
-
 <ion-content class="login-container">
   <div class="login-box">
     <div class="logo-container">
       <img src="assets/logo.png" alt="Logo IDT" class="logo" />
     </div>
-    
+
     <h2 class="login-title">Connectez-vous à votre compte</h2>
 
-    <div class="form-container">
+    <!-- Lier la balise form au FormGroup et gérer la soumission -->
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="form-container">
       <ion-item class="custom-item">
         <ion-label position="stacked">Email</ion-label>
-        <ion-input type="email" [(ngModel)]="email" placeholder="admin@gmail.com" class="custom-input"></ion-input>
+        <!-- Utiliser formControlName pour lier à la propriété 'email' du FormGroup -->
+        <ion-input type="email" formControlName="email" placeholder="admin@gmail.com" class="custom-input"></ion-input>
       </ion-item>
+      <!-- Affichage optionnel des erreurs pour l'email -->
+      <div *ngIf="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)" class="error-messages ion-padding-start">
+        <div *ngIf="loginForm.get('email')?.errors?.['required']" style="color: var(--ion-color-danger); font-size: small;">
+          L'email est requis.
+        </div>
+        <div *ngIf="loginForm.get('email')?.errors?.['email']" style="color: var(--ion-color-danger); font-size: small;">
+          Format d'email invalide.
+        </div>
+      </div>
 
       <ion-item class="custom-item">
         <ion-label position="stacked">Mot de passe</ion-label>
-        <ion-input type="password" [(ngModel)]="password" placeholder="mot de passe" class="custom-input"></ion-input>
+        <!-- Utiliser formControlName pour lier à la propriété 'password' du FormGroup -->
+        <ion-input type="password" formControlName="password" placeholder="mot de passe" class="custom-input"></ion-input>
       </ion-item>
+      <!-- Affichage optionnel des erreurs pour le mot de passe -->
+      <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)" class="error-messages ion-padding-start">
+        <div *ngIf="loginForm.get('password')?.errors?.['required']" style="color: var(--ion-color-danger); font-size: small;">
+          Le mot de passe est requis.
+        </div>
+        <div *ngIf="loginForm.get('password')?.errors?.['minlength']" style="color: var(--ion-color-danger); font-size: small;">
+          Le mot de passe doit contenir au moins {{ loginForm.get('password')?.errors?.['minlength'].requiredLength }} caractères.
+        </div>
+      </div>
 
       <ion-item lines="none" class="remember-me-item">
-        <ion-checkbox slot="start" [(ngModel)]="rememberMe"></ion-checkbox>
+        <!-- Utiliser formControlName pour lier à la propriété 'rememberMe' du FormGroup -->
+        <ion-checkbox slot="start" formControlName="rememberMe"></ion-checkbox>
         <ion-label>Souviens-toi de moi</ion-label>
       </ion-item>
 
-      <ion-button expand="block" (click)="login()" class="sign-in-button">SE CONNECTER</ion-button>
-      
+      <!-- Le bouton de type submit déclenchera (ngSubmit) sur la balise form -->
+      <ion-button type="submit" expand="block" class="sign-in-button" [disabled]="loginForm.invalid || isLoading">
+        <ion-spinner *ngIf="isLoading" name="crescent"></ion-spinner>
+        <span *ngIf="!isLoading">SE CONNECTER</span>
+      </ion-button>
+
       <div class="additional-options">
         <a href="#" class="forgot-password">Mot de passe oublié?</a>
       </div>
-    </div>
+    </form>
   </div>
 </ion-content>
 
