--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -44,7 +44,7 @@
     margin-bottom: 15px;
   }
   .custom-input {
-    --background: #f9f9f9;
+    --background: #8a3131;
     --padding-start: 10px;
     --padding-end: 10px;
     --padding-top: 12px;
@@ -52,6 +52,7 @@
     --border-radius: 4px;
     --border-color: #ddd;
     margin-top: 5px;
+    border-width: 1px;
   }
   .remember-me-item {
     --background: transparent;
